# anontown-server-migrate

./: .gitmodules  Cargo.toml
anontown-server-rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  schema.graphql
anontown-server-rust/migrations/: 20240324000000_initial_schema.sql
anontown-server-rust/src/: at_error.rs  auth.rs  context.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
anontown-server-rust/src/adapters/: auth_container.rs  auth_container_impl.rs  mod.rs
anontown-server-rust/src/adapters/auth/: auth-container.rs
anontown-server-rust/src/adapters/client-repo/: client-repo-mock.rs  client-repo.rs  mod.rs
anontown-server-rust/src/adapters/clock/: clock.rs  fix-clock.rs
anontown-server-rust/src/adapters/history-repo/: history-model.rs  history-repo-mock.rs  history-repo.rs  history-repo_test.rs  mod.rs
anontown-server-rust/src/adapters/id-generator/: id-generator.rs
anontown-server-rust/src/adapters/ip/: ip-container.rs
anontown-server-rust/src/adapters/logger/: logger.rs
anontown-server-rust/src/adapters/mock/: mod.rs
anontown-server-rust/src/adapters/object-id-generator/: mod.rs  (+1 more)
anontown-server-rust/src/entities/: client.rs  history.rs  mod.rs  profile.rs  res.rs  storage.rs  token.rs  topic.rs  user.rs
anontown-server-rust/src/graphql/: context.rs  mod.rs  schema.rs
anontown-server-rust/src/models/: client.rs
anontown-server-rust/src/ports/: auth.rs  auth_container.rs  client.rs  clock.rs  history.rs  id-generator.rs  ip.rs  logger.rs  mod.rs  notification_queue.rs  notification_sender.rs  object-id-generator.rs  object_id.rs  profile.rs  push_subscriptions.rs  recaptcha.rs  res.rs  safe-id-generator.rs  safe_id.rs  storage.rs  token.rs  token_repo.rs  topic.rs  types.rs  user.rs
anontown-server-rust/src/schema/: context.rs  input.rs  mod.rs  mutation.rs  query.rs  scalar.rs  subscription.rs  types.rs  types_test.rs
anontown-server-rust/src/usecases/: get_client.rs  get_history.rs  get_profile.rs  mod.rs
(+39 files in other folders)
