[package]
name = "anontown-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
juniper = { version = "0.15", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3" 