[package]
name = "anontown-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-session = { version = "0.7", features = ["redis"] }
actix-rt = "2.8"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
juniper = { version = "0.15", features = ["async"] }
juniper-from-schema = "0.10"
async-trait = "0.1" 