[package]
edition = "2021"
name = "anontown-server"
version = "0.1.0"

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-rt = "2.8"
actix-session = {version = "0.7", features = ["redis"]}
actix-web = "4.4"
anyhow = "1.0"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
env_logger = "0.10"
juniper = "0.16"
log = "0.4"
redis = {version = "0.23", features = ["tokio-comp"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
thiserror = "1.0"
tokio = {version = "1.36", features = ["full"]}
futures = "0.3"
